# learnings

ImageEmbedding/: DEPENDENCIES.md  LINUX_SETUP.md  README.md  SETUP.md  app.py  main.py  pyproject.toml  requirements.txt  run.sh  run_linux.sh  run_uv.sh  test_imports.py  test_setup.py
ImageEmbedding/static/css/: style.css
ImageEmbedding/static/js/: main.js
ImageEmbedding/templates/: base.html  index.html  result.html
