[project]
name = "mediapipe-image-embedder"
version = "2.0.0"
description = "MediaPipe Image Embedder Web Application with embedding visualization"
authors = [
    {name = "AI Developer", email = "developer@example.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "werkzeug>=3.1.3",
    "mediapipe>=0.10.21",
    "opencv-contrib-python>=4.11.0",
    "numpy>=1.26.4",
    "pillow>=12.0.0",
    "urllib3>=2.5.0",
    "matplotlib>=3.10.7",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "itsdangerous>=2.2.0",
    "click>=8.3.0",
    "blinker>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
