[project]
name = "mediapipe-image-embedder"
version = "2.0.0"
description = "MediaPipe Image Embedder Web Application"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "mediapipe",
    "opencv-python-headless",
    "numpy",
    "pillow",
    "urllib3",
    "matplotlib",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
